full boilerplate tested and air support
